--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arik Rahaman Anoy</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="images/arik cricle.png" type="image/x-icon">
 </head>
 <body>
+
     <h1>Website of Arik Rahaman Anoy</h1>
 </body>
 </html>
