--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="shortcut icon" href="images/arik cricle.png" type="image/x-icon">
 </head>
 <body>
-
-    <h1>Website of Arik Rahaman Anoy</h1>
+<div class="hero">
+    <div style="padding:30px;">
+    <h1 style="color: white; font-family: 'Times New Roman', Times, serif;">Website of Arik Rahaman Anoy</h1>
+    </div>
+</div>
 </body>
 </html>
