--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
     <link rel="shortcut icon" href="images/arik cricle.png" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <nav>
+        <ul>
+            <li><a href="#bio"> Bio</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#portfolio"> Portfolio</a></li>
+
+        </ul>
+    </nav>
+    </header>
 <div class="hero">
     <div style="padding:30px;">
     <h1 style="color: white; font-family: 'Times New Roman', Times, serif;">Website of Arik Rahaman Anoy</h1>
     </div>
+    <iframe src="" frameborder="0"></iframe>
 </div>
 </body>
 </html>
