--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div style="padding:30px;">
     <h1 style="color: white; font-family: 'Times New Roman', Times, serif;">Website of Arik Rahaman Anoy</h1>
     </div>
-    <iframe src="" frameborder="0"></iframe>
 </div>
+<footer>&copy; 2024 All Right Reserved</footer>
 </body>
 </html>
