--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
     <header>
         <nav>
         <ul>
-            <li><a href="#bio"> Bio</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#portfolio"> Portfolio</a></li>
+            <li><a href="#bio"> Arik's Bio</a></li>
+            <li><a href="#episode">Episodes</a></li>
+            <li><a href="#blog"> Blogs</a></li>
 
         </ul>
     </nav>
     </header>
-<div class="hero">
-    <div style="padding:30px;">
-    <h1 style="color: white; font-family: 'Times New Roman', Times, serif;">Website of Arik Rahaman Anoy</h1>
-    </div>
-</div>
+<main>
+    <div class="hero" style="padding:30px;">
+    <h1 style="color: white; font-family: 'Times New Roman', Times, serif;">Arik's Talk Podcast</h1>
+    <form action="">
+        <input placeholder="Subscribe Now"  type="email">
+        <input value="Subscribe" type="button">
+    </form>
+     </div>
+</main>
 <footer>&copy; 2024 All Right Reserved</footer>
 </body>
 </html>
