--- a/index.html
+++ b/index.html
@@ -25,6 +25,30 @@
         <input placeholder="Subscribe Now"  type="email">
         <input value="Subscribe" type="button">
     </form>
+    <fieldset>
+        <legend style="color:white;">
+            Rate Arik's Talk Podcast
+        </legend>
+        <label style="color:white;" for="5 Star">
+            <input name="rating" type="radio"> 5 star rating
+        </label>
+        <label style="color:white;" for="5 Star">
+            <input name="rating" type="radio"> 4 star rating
+        </label>
+    
+    <label style="color:white;" for="5 Star">
+        <input name="rating" type="radio"> 3 star rating
+    </label>
+
+<label style="color:white;" for="5 Star">
+    <input name="rating" type="radio"> 2 star rating
+
+</label>
+<label style="color:white;" for="5 Star">
+    <input name="rating" type="radio"> 1 star rating
+</label>
+        
+    </fieldset>
      </div>
 </main>
 <footer>&copy; 2024 All Right Reserved</footer>
